# tinyrenderer

./: CMakeLists.txt  README.md  main.cpp  model.cpp  output.tga  tgaimage.cpp
lesson1/: geometry.h  model.h  tgaimage.h
lesson2/: CMakeLists.txt  geometry.h  main.cpp
lesson3/: CMakeLists.txt  main.cpp  model.cpp  model.h  tgaimage.cpp
